--- a/src/GracePeriodCalculation.css
+++ b/src/GracePeriodCalculation.css
@@ -19,3 +19,8 @@
     border-radius: 5px;
     background-color:rgba(202, 142, 142, 0.522);
 }
+.ChangeText{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(205, 92, 92);
+    margin-left: 20px;
+}
