--- a/src/GracePeriodVisualization.css
+++ b/src/GracePeriodVisualization.css
@@ -11,5 +11,10 @@ p{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .plot{
-    width: 95%
+    width: 95%;
+    margin-top: 5px;
+    
+}
+.ResultTable{
+    width: 40%
 }
