--- a/src/ToolTip.css
+++ b/src/ToolTip.css
@@ -6,20 +6,27 @@
   
   .tooltip .tooltiptext {
     visibility: hidden;
-    width: 500px;
+    width: 600px;
+    max-height: 200;
     background-color: rgb(191, 191, 191);
     color: black;
     text-align: left;
-    border-color: black;
-    padding: 5px 0;
+    border: 1px solid black;
+    padding: 10px;
+    
   
     /* Position the tooltip */
     position: absolute;
     z-index: 1;
+    opacity: 0;
+    transition: opacity 0.5s;
+    overflow-y: auto;
   }
   
   .tooltip:hover .tooltiptext {
     visibility: visible;
+    transform: translateY(-50%);
+    opacity: 1;
   }
 .days{
   vertical-align: middle;
